[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.23.0", features = ["full", "macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["timeout"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
