[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full", "macros", "rt-multi-thread"] }
# Serde / json
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
# Axum
axum = { version = "0.6.1", features =  ["macros"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9.0"
# Others
lazy-regex = "2.5.0"
async-trait = "0.1.68"
strum_macros = "0.24.3"
uuid = { version = "1.3.4", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
